# Doc2Quiz

./: README.md
d2q-backend/: .gitignore  README.md  main.py  pyproject.toml
d2q-backend/api/: knowledge_point.py  question_bank.py  question_gen.py  quiz_bank.py  quiz_gen.py
d2q-backend/cfg/: setting.py
d2q-backend/data/: knowledge_tree.json  question.json  question_bank.json  quiz_bank.json  quiz_question.json
d2q-backend/infrastructure/: __init__.py  service_manager.py
d2q-backend/services/: common.py  knowledge_service.py  question_bank_service.py  question_service.py
d2q-backend/utils/: json_utils.py  unified_logger.py
d2q-frontend/: README.md  index.html  package-lock.json  package.json  server.js  vite.config.ts
d2q-frontend/src/: App.css  App.tsx
d2q-frontend/src/components/: DocumentList.tsx  FileUpload.css  FileUpload.tsx  KnowledgeDirectory.css  KnowledgeDirectory.tsx  QuizBank.css  QuizBank.tsx  QuizCompose.css  QuizCompose.tsx  QuizCreate.css  QuizCreate.tsx  QuizCreateCard.css  QuizCreateCard.tsx  QuizHistoryList.css  QuizHistoryList.tsx  QuizPaperManage.css  QuizPaperManage.tsx  QuizView.tsx
d2q-frontend/src/hooks/: useQuiz.ts
d2q-frontend/src/services/: api.ts
d2q-frontend/src/types/: index.ts
d2q-frontend/src/utils/: index.ts
