[project]
name = "d2q-backend"
version = "0.1.0"
description = "Doc2Quiz Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "uvicorn>=0.37.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "langgraph>=0.6.7",
    "openai>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.30",
    "colorama>=0.4.6",
    "langchain-core>=0.3.76",
    "dashscope>=1.24.6",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
]


